fix error and view for reserve

--- a/admin/templates/basicadm.html
+++ b/admin/templates/basicadm.html
@@ -29,6 +29,7 @@
                         <a class="dropdown-item" href="{{url_for('administrator.index_adm')}}">Панель администратора</a>
                         <a class="dropdown-item" href="{{url_for('administrator.allusers')}}">Пользователи</a>
                         <a class="dropdown-item" href="{{url_for('administrator.tempusers')}}">Незарегистрированные</a>
+                        <a class="dropdown-item" href="{{url_for('administrator.reserve')}}">Резерв</a>
                         <a class="dropdown-item" href="{{url_for('administrator.event')}}">События</a>
                         <a class="dropdown-item" href="{{url_for('administrator.getdata')}}">Отчет по регистрациям</a>
                         <a class="dropdown-item" href="{{url_for('administrator.faculty')}}">Факультеты</a>
