change text by admin

--- a/admin/templates/admn.html
+++ b/admin/templates/admn.html
@@ -16,6 +16,7 @@
     </span>
     <a href="{{url_for('administrator.faculty')}}" style="margin:15px"><figure style="display:inline-block"><img src="{{url_for('static', filename='image/for_admin/faculty.png')}}" /><figcaption>Факультеты</figcaption></figure></a>
     <a href="{{url_for('administrator.post')}}" style="margin:15px"><figure style="display:inline-block"><img src="{{url_for('static', filename='image/for_admin/news.png')}}" /><figcaption>Опубликовать новость</figcaption></figure></a>
+    <a href="{{url_for('administrator.pages')}}" style="margin:15px"><figure style="display:inline-block"><img src="{{url_for('static', filename='image/for_admin/edit.png')}}" width="128px" /><figcaption>Редактировать тексты</figcaption></figure></a>
     <a href="{{url_for('administrator.backupdb')}}" style="margin:15px"><figure style="display:inline-block"><img src="{{url_for('static', filename='image/for_admin/db.png')}}" /><figcaption>Бэкап Базы Данных</figcaption></figure></a>
 </div>
 <footer></footer>
