--- a/admin/templates/basicadm.html
+++ b/admin/templates/basicadm.html
@@ -34,6 +34,7 @@
                         <a class="dropdown-item" href="{{url_for('administrator.getdata')}}">Отчет по регистрациям</a>
                         <a class="dropdown-item" href="{{url_for('administrator.faculty')}}">Факультеты</a>
                         <a class="dropdown-item" href="{{url_for('administrator.post')}}">Новости</a>
+                        <a class="dropdown-item" href="{{url_for('administrator.pages')}}">Редактировать тексты</a>
                         <a class="dropdown-item" href="{{url_for('administrator.backupdb')}}">Бэкап базы</a>
                     </div>
                 </span>
