real_time.html without last activity and new icon fix cronsend

--- a/templates/real_time.html
+++ b/templates/real_time.html
@@ -12,7 +12,7 @@
         <div class="media border rounded-right m-2 p-2">
             
             <div>
-                <img src="/static/image/for_new/com.png" />
+                <img src="/static/image/on_pages/action.png" width="64px"/>
             </div>
 
             <div class="media-body ml-3">
