insert data into faculty

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h2 class="m-2">Новости Личного Кабинета</h2>
+            <h2 class="m-2">Новости личного кабинета</h2>
             <div class="news">
                 {% for n in news %}
                 <div class="media border rounded-right m-2 p-2">
