--- a/templates/basic.html
+++ b/templates/basic.html
@@ -16,7 +16,8 @@
             <div class="col-md-3 text-right"><a href="/person">Регистрация</a> | <a href="/login">Личный кабинет</a></div>
         </div>
         <div class="exter">
-            <h1 class="logo">Волонтерство на олимпиадах и конкурсах Личный Кабинет</h1>
+            <h1 class="logo">Волонтерство на олимпиадах и конкурсах</br>
+                Личный кабинет</h1>
             {% if (session.get('id')) %}
             <img src="/static/image/v2019.png" width="50%" /><img src="/static/image/v2019.png" width="50%" />
             {% else %}
