--- a/user/templates/generate_pdf.html
+++ b/user/templates/generate_pdf.html
@@ -20,7 +20,7 @@ var docDefinition = {
 			margin: [ 0, 20, 0, 35 ]
 		},
 		{
-			text: 'Данная справка подтверждает, что {{fio}} действительно принимал(а) участие в мероприятии, проводимом Дирекцией по профессиональной ориентации и работе с одаренными учащимися {{evt_date}} в качестве волонтера.',
+			text: 'Данная справка подтверждает, что {{fio}} действительно принимал(а) участие в мероприятии {{activity_name}}, проводимом Дирекцией по профессиональной ориентации и работе с одаренными учащимися {{evt_date}} в качестве волонтера.',
 			fontSize: 14,
 			lineHeight: 1.2
 		},
